# iofs

./: .gitignore  Cargo.toml  README.md
examples/: io.rs  main.rs
src/: lib.rs
src/color/: colorful.rs  mod.rs
src/env/: mod.rs
src/fs/: dir.rs  fd.rs  file.rs  mod.rs  other.rs  pathstr.rs  pbuilder.rs  stream.rs
src/fs/os/: meta.rs  mod.rs
src/io/: console.rs  convert.rs  mod.rs  number.rs
src/prelude/: compare.rs  find.rs  mod.rs  range.rs  symbols.rs
src/prelude/strs/: mod.rs
