[package]
name = "iofs"
version = "0.0.7"
edition = "2021"
license = "MIT"
description = "a simple lib for file system, input and output"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
url = { version = "2.4.0", optional = true }
warp = { version = "0.3.5", optional = true }


[features]
web_warp = ["warp", "url"]
